docs/.theme/assets/_default.scss
html, body {
  margin: 0;
  padding: 0;
}

body {
  @include theme("background-color", $theme-color-bg);
  @include theme("color", $theme-color-fg);
}

img.do {
  &:is(.logo),
  &:is(.logo:is(.full)) {
    @include theme("content", $theme-url-logo-full);
  }

  &:is(.logo:is(.mark)) {
    @include theme("content", $theme-url-logo-mark);
  }
}

.content {
  h1 {
   &, code {
      @include theme("color", $theme-color-brand);
   }
  }

  h2, h3, h4, h5, h6 {
    &, code {
      @include theme("color", $theme-color-fg);
      overflow: scroll;
    }
  }

  h1 {
    font-size: 40px;
  }
  h2 {
    scroll-margin-top: 0.5em;
    margin-top: 1.5em;
  }

  h3 {
    scroll-margin-top: 1em;
    margin-top: 1.5em;
  }

  nav {
    h4 {
      margin-top: 0;
      margin-bottom: 0.5em;
      text-transform: uppercase;

      a {
        @include theme("color", $theme-color-fg-passive);
        text-decoration: none;
        display: inline-block;

        &:hover {
          @include theme("color", $theme-color-fg-passive);
        }
      }
    }
  }

  p {
    line-height: 1.5em;

    &:has(.diagram) {
      @include box;

      text-align: center;
      padding: 30px 0px 18px 0px;
    }
  }

  code {
    @include theme("background-color", $theme-color-bg-code);
    @include theme("color", $theme-color-fg-code);

    border-radius: 5px;
    padding: 0.2em 0.4em;
    overflow-wrap: anywhere;
  }

  blockquote {
    pre {
      margin-right: 3em;
    }
  }

  pre {
    @include box;

    padding: 1.2em;
    text-wrap: wrap;
    overflow: auto;

    code {
      padding: 0;
      background-color: transparent;
      text-wrap: nowrap;
      display: block;
      max-width: 0px;
    }
  }

  ul, ol {
    padding-inline-start: 1.2em;

    li {
      margin-bottom: 0.2em;
      line-height: 1.50em;

      ul, ol {
        margin-top: 0.2em;
      }
    }
  }

  table {
    border-spacing: 0;
    width: 100%;

    @include border();
    @include radius();

    tr {
      td, th {
        @include border(bottom);

        padding: 1vh 1vw;
      }

      th {
        @include theme("color", $theme-color-brand);
      }

      &:nth-child(2n-1) td {
        @include theme("color", $theme-color-fg-table);
        @include theme("background-color", $theme-color-bg-table);
      }

      &:last-child {
        td {
          border-bottom: 0;
        }
      }
    }

    * {
      text-align: left;
    }
  }

  hr {
    @include border();
  }
}

@media (max-width: $width-page) {
  .content {
    h1 {
      font-size: 35px;
    }

    h2 {
      font-size: 24px;
    }

    h3 {
      font-size: 18px;
    }

    h4 {
      font-size: 16px;
    }

    p {
      font-size: 14px;
      line-height: 1.75em;

      code {
        font-size: 12px;
      }
    }

    ul, ol {
      li {
        font-size: 14px;
      }

      code {
        font-size: 12px;
      }
    }
  }
}

@media (max-width: $width-page-l) {
  .content {
    h2 {
      scroll-margin-top: 2em;
    }

    h3 {
      scroll-margin-top: 3em;
    }
  }

  nav {
    h4 {
      a {
        cursor: pointer;
        padding: 1em;

        &:hover {
          @include theme("color", $theme-color-brand);
        }
      }
    }
  }
}

